refactor: Simplify project structure and dependencies
Improve project structure for better maintainability and readability:
* Refactor project name to follow Python naming conventions
* Move main functionality into a package for easier testing and reuse

Update dependencies and project metadata:
* Regenerate uv.lock file for consistent dependencies
* Update pyproject.toml for new project structure and package

Improve Makefile for streamlined development:
* Simplify setup and installation targets
* Remove redundant dependency specifications

Update README for clarity and consistency:
* Reflect new project name and installation instructions

These changes improve the project's maintainability, readability, and consistency without introducing new functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "clear-plex-watchlist"
+name = "clear_plex_watchlist"
 version = "0.1.0"
 description = "A utility to clear Plex watchlists efficiently"
 readme = "README.md"
@@ -36,3 +36,10 @@ line-ending = "auto"
 
 [tool.pytest]
 testpaths = ["tests"]
+
+[tool.hatch.build.targets.wheel]
+sources = ["clear-plex-watchlist.py"]
+forces = ["clear_plex_watchlist = clear-plex-watchlist:clear_plex_watchlist"]
+
+[project.scripts]
+clear-plex-watchlist = "clear_plex_watchlist:clear_plex_watchlist"
