feat: Add version file and update project metadata
* Added a `__version__.py` file to manage the package version
* Updated `pyproject.toml` to use dynamic versioning and include author email
* Changed project metadata to use a more standardized format
* Updated dependencies to ensure compatibility with the new versioning scheme
* Improved project configuration for better maintainability and readability

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "hatchling.build"
 
 [project]
 name = "clear_plex_watchlist"
-version = "0.1.0"
+dynamic = ["version"]
 description = "A utility to clear Plex watchlists efficiently"
 readme = "README.md"
 requires-python = ">=3.12"
 license = {text = "MIT"}
 authors = [
-    {name = "Developer"}
+    { name = "cellwebb", email = "cellwebb@users.noreply.github.com" },
 ]
 dependencies = [
     "plexapi>=4.15.0",
@@ -39,3 +39,6 @@ testpaths = ["tests"]
 
 [project.scripts]
 clear-plex-watchlist = "clear_plex_watchlist:clear_plex_watchlist"
+
+[tool.hatch.version]
+path = "clear_plex_watchlist/__version__.py"
